fixed horizontal scrollbar

--- a/src/PageLayout/PageLayout.css
+++ b/src/PageLayout/PageLayout.css
@@ -1,5 +1,5 @@
 .main {
-  width: 100vw;
+  width: 100%;
   height: fit-content;
   min-height: 100vh;
   display: flex;
